@@ -76,6 +76,8 @@ Version SVN HEAD (?)
   * Implemented copy & paste of DimensionRegion (with Alt+c and Alt+v).
   * Dimension Region Chooser: Mark all zones auto selected by check box trio
     with gray hatched pattern.
+  * Region Chooser: Mark all regions which are auto selected by check box
+    "All Regions" with gray hatched pattern.
 
 Version 1.0.0 (2015-07-17)
 
